@@ -14,6 +14,10 @@
   <dependencies>
     <dependency>
       <groupId>org.hps</groupId>
+      <artifactId>hps-online-monitoring</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hps</groupId>
       <artifactId>hps-recon</artifactId>
     </dependency>
     <dependency>
@@ -45,12 +49,27 @@
       <groupId>org.sonatype.nexus</groupId>
       <artifactId>google-guava-eventbus</artifactId>
       <version>3.2.0-01</version>
-  </dependency>
+    </dependency>
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.5</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
       <!-- https://www.mojohaus.org/appassembler/appassembler-maven-plugin/ -->
-    <plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>appassembler-maven-plugin</artifactId>
         <version>1.10</version>
@@ -74,17 +93,28 @@
               <mainClass>org.hps.online.recon.Server</mainClass>
               <id>online-recon-server</id>
               <jvmSettings>
-                <maxMemorySize>1g</maxMemorySize>
+                <maxMemorySize>4g</maxMemorySize>
+                <initialMemorySize>1g</initialMemorySize>
+                <maxStackSize>128m</maxStackSize>
                 <systemProperties>
                   <systemProperty>java.util.logging.config.class=org.hps.online.recon.logging.ServerLoggingConfig</systemProperty>
                 </systemProperties>
+                <extraArguments>
+                  <extraArgument>-XX:+UnlockExperimentalVMOptions</extraArgument>
+                  <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+                  <extraArgument>-XX:MaxGCPauseMillis=50</extraArgument>
+                  <extraArgument>-XX:G1HeapRegionSize=32M</extraArgument>
+                  <extraArgument>-XX:G1NewSizePercent=20</extraArgument>
+                  <extraArgument>-XX:G1ReservePercent=20</extraArgument>
+                  <extraArgument>-XX:SoftRefLRUPolicyMSPerMB=1</extraArgument>
+                </extraArguments>
               </jvmSettings>
             </program>
             <program>
               <mainClass>org.hps.online.recon.Client</mainClass>
               <id>online-recon-client</id>
               <jvmSettings>
-                <maxMemorySize>500m</maxMemorySize>
+                <maxMemorySize>200m</maxMemorySize>
                 <systemProperties>
                   <systemProperty>java.util.logging.config.class=org.hps.online.recon.logging.ClientLoggingConfig</systemProperty>
                 </systemProperties>
@@ -92,9 +122,9 @@
             </program>
             <program>
               <mainClass>org.hps.record.evio.EvioFileProducer</mainClass>
-              <id>hps-recon-producer</id>
+              <id>evio-producer</id>
               <jvmSettings>
-                <maxMemorySize>2g</maxMemorySize>
+                <maxMemorySize>1g</maxMemorySize>
                 <systemProperties>
                   <systemProperty>java.util.logging.config.class=org.hps.online.recon.logging.LoggingConfig</systemProperty>
                 </systemProperties>
@@ -102,7 +132,7 @@
             </program>
           </programs>
         </configuration>
-    </plugin>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
